--- a/style.css
+++ b/style.css
@@ -47,3 +47,16 @@ header {
 .gallery img:hover {
   transform: scale(1.02);
 }
+.gallery figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.gallery figcaption {
+  margin-top: 0.5rem;
+  font-size: 0.9rem;
+  text-align: center;
+  color: var(--text);
+  opacity: 0.7;
+}
