--- a/style.css
+++ b/style.css
@@ -127,3 +127,17 @@ header {
     border-radius: 6px;
   }
 }
+footer {
+  margin-top: 5rem;
+  padding: 2rem 1rem;
+  text-align: center;
+  font-size: 1rem;
+  opacity: 0.7;
+  border-top: 1px solid #ccc;
+}
+
+footer a {
+  color: inherit;
+  text-decoration: underline;
+  cursor: pointer;
+}
