--- a/style.css
+++ b/style.css
@@ -20,13 +20,17 @@ body {
   min-height: 100vh;
 }
 
-main.gallery {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 4rem;
-  padding-bottom: 2rem;
+.gallery img {
+  width: 100%;
+  max-width: 60%;
+  height: auto;
+  margin: 0 auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  display: block;
+  cursor: pointer;
+}
+
 }
 
 header {
