--- a/style.css
+++ b/style.css
@@ -46,6 +46,13 @@ header em {
   font-size: 1.3rem;
   opacity: 0.8;
 }
+.header-divider {
+  margin: 1rem auto 2rem auto;
+  width: 60px;
+  height: 2px;
+  background: var(--text);
+  opacity: 0.2;
+  border: none;
 }
 
 .about {
