--- a/style.css
+++ b/style.css
@@ -31,9 +31,15 @@ body {
   cursor: pointer;
 }
 
+header {
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
 header h1 {
-  font-size: 2rem;
-  line-height: 1.4;
+  font-size: 2.2rem;
+  line-height: 1.8;
+  margin: 0;
 }
 
 header em {
@@ -41,18 +47,19 @@ header em {
   font-weight: normal;
   display: block;
   margin-top: 0.25rem;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   opacity: 0.8;
 }
-}
+
 .header-divider {
-  margin: 1rem auto 2rem auto;
+  margin: 1.5rem auto 2rem auto;
   width: 60px;
   height: 2px;
   background: var(--text);
   opacity: 0.2;
   border: none;
 }
+
 
 .about {
   max-width: 700px;
