--- a/style.css
+++ b/style.css
@@ -111,14 +111,16 @@ header em {
 .gallery figcaption {
   margin-top: 0.5rem;
   text-align: center;
-  font-size: 1rem;
-  opacity: 0.8;
 }
 
 .gallery figcaption em {
+  font-size: 0.85rem;
+  font-weight: 300;
   font-style: italic;
-  font-weight: normal;
+  opacity: 0.6;
+  line-height: 1.4;
 }
+
 
 .fade-in {
   opacity: 0;
