--- a/style.css
+++ b/style.css
@@ -113,12 +113,8 @@ header em {
 .gallery figcaption {
   margin-top: 0.25rem;
   text-align: center;
-  font-size: 0.85rem;
-  font-weight: 300;
-  font-style: italic;
-  opacity: 0.6;
-  line-height: 1.4;
 }
+
 .gallery figcaption em {
   font-family: 'IBM Plex Sans', system-ui, sans-serif;
   font-size: 0.85rem;
@@ -127,7 +123,7 @@ header em {
   opacity: 0.6;
   line-height: 1.4;
 }
-
+}
 
 .fade-in {
   opacity: 0;
