--- a/style.css
+++ b/style.css
@@ -50,14 +50,14 @@ header {
 }
 
 header h1 {
-  font-family: 'IBM Plex Serif', serif;
+  font-family: 'IBM Plex Serif';
   font-size: 2.2rem;
   line-height: 1.8;
   margin: 0;
 }
 
 header em {
-  font-family: 'IBM Plex Sans', system-ui, sans-serif;
+  font-family: 'IBM Plex Sans';
   font-style: italic;
   font-weight: 300;
   display: block;
@@ -83,7 +83,7 @@ header em {
 }
 
 .about h2 {
-  font-family: 'IBM Plex Serif', serif;
+  font-family: 'IBM Plex Serif';
   font-weight: 600;
   font-size: 1.5rem;
   margin-bottom: 1rem;
