--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header {
   margin-bottom: 3rem;
 }
 
-header h1 {
+h1 {
   font-family: 'IBM Plex Serif';
   font-size: 2.2rem;
   line-height: 1.8;
