--- a/style.css
+++ b/style.css
@@ -49,8 +49,9 @@ header {
   margin-bottom: 3rem;
 }
 
-h1 {
-  font-family: 'IBM Plex Serif';
+header h1 {
+  font-family: 'IBM Plex Serif', serif !important;
+  font-weight: 600 !important;
   font-size: 2.2rem;
   line-height: 1.8;
   margin: 0;
