--- a/style.css
+++ b/style.css
@@ -49,12 +49,13 @@ header {
   margin-bottom: 3rem;
 }
 
-header h1 {
-  font-family: 'IBM Plex Serif', serif !important;
-  font-weight: 400 !important;
+h1 {
+  font-family: 'IBM Plex Serif', serif;
+  font-weight: 600;
   font-size: 2.2rem;
   line-height: 1.8;
   margin: 0;
+  text-align: center;
 }
 
 header em {
