--- a/style.css
+++ b/style.css
@@ -44,11 +44,6 @@ body {
   min-height: 100vh;
 }
 
-header {
-  text-align: center;
-  margin-bottom: 3rem;
-}
-
 h1 {
   font-family: 'IBM Plex Serif', serif;
   font-weight: 600;
@@ -56,6 +51,17 @@ h1 {
   line-height: 1.8;
   margin: 0;
   text-align: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.about h2 {
+  font-family: 'IBM Plex Serif', serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 header em {
