--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 h1 {
-  font-family: 'IBM Plex Serif', serif;
+  font-family: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
   font-weight: 600;
   font-size: 2.2rem;
   line-height: 1.8;
@@ -56,7 +56,7 @@ h1 {
 }
 
 .about h2 {
-  font-family: 'IBM Plex Serif', serif;
+  font-family: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
   font-weight: 600;
   font-size: 1.5rem;
   margin-bottom: 1rem;
